added contact us form but without validation

--- a/TPM Mini Project/index.html
+++ b/TPM Mini Project/index.html
@@ -85,7 +85,6 @@
             />
           </svg>
         </div>
-        <!-- <img src="lens-aperture.png" alt="Logo" id="logo-home" class=""/> -->
         <h1 class="main-text text-aperture">Aperture Photos</h1>
         <p class="sec-text home-white-text">Defining photos to reminiscenes</p>
       </div>
@@ -171,7 +170,12 @@
             <input type="text" id="form-email" name="email" placeholder="Email" class="place-holder-text">
             <input type="text" id="form-phone-number" name="phonenumber" placeholder="Phone Number" class="place-holder-text">
             <input type="text" id="form-message" name="message" placeholder="Message" class="place-holder-text">
+            <button id="submit-button"> 
+              <h3 class="submit-text">Submit</h3>
+            </button>
           </div>
+          
+        </div>
         </div>
       </div>
       <footer class="footer">
