--- a/TPM Mini Project/index.html
+++ b/TPM Mini Project/index.html
@@ -17,6 +17,7 @@
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <div class="navbar-wrapper">
       <div class="navbar-black"></div>
       <nav>
@@ -196,15 +197,15 @@
         <h1 class="main-text" id="contact-us-head">Contact us</h1>
         <div class="contact-us-form">
           <div class="form-box"></div>
-          <div class="input-form">
-            <input type="text" id="form-name" name="firstname" placeholder="Name" class="place-holder-text">
-            <input type="text" id="form-email" name="email" placeholder="Email" class="place-holder-text">
-            <input type="text" id="form-phone-number" name="phonenumber" placeholder="Phone Number" class="place-holder-text">
-            <input type="text" id="form-message" name="message" placeholder="Message" class="place-holder-text">
+          <form id="input-form" onSubmit="alertFunction()">
+            <input type="text" id="form-name" name="name" placeholder="Name" class="place-holder-text" required>
+            <input type="email" id="form-email" name="email" placeholder="Email" class="place-holder-text" required>
+            <input type="number" id="form-phone-number" name="phonenumber" placeholder="Phone Number" class="place-holder-text" required minlength="9">
+            <input type="text" id="form-message" name="message" placeholder="Message" class="place-holder-text" required>
             <button id="submit-button"> 
               <h3 class="submit-text">Submit</h3>
             </button>
-          </div>
+          </form>
         </div>
         </div>
       </div>
