added responsiveness but without the hamburger navbar

--- a/TPM Mini Project/index.html
+++ b/TPM Mini Project/index.html
@@ -116,7 +116,7 @@
                 L10.918,17.961z"
             />
           </svg>
-        </div>
+        </div class ="text-wrapper-home">
         <h1 class="main-text text-aperture">Aperture Photos</h1>
         <p class="sec-text home-white-text">Defining photos to reminiscenes</p>
       </div>
