final version (can't make the hamburger navbar)

--- a/TPM Mini Project/index.html
+++ b/TPM Mini Project/index.html
@@ -18,9 +18,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <div class="navbar-wrapper">
       <div class="navbar-black"></div>
       <nav>
+        </label>
         <div class="navbar-items">
           <span>
             <a href="#home">
